动态规划，背包问题的周赛，自己没有思路，在动态规划方向的题目可能还得多刷一些